<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".PaymentPage">
    <com.google.android.material.navigation.NavigationView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:headerLayout="@layout/nav_search"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/backCartDetail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_back" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/review_cart"
            android:textSize="18dp"
            android:layout_marginTop="16dp"
            android:layout_marginStart="16dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="380dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:layout_marginTop="10dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/delivery_address"
            android:textColor="@color/black"
            android:textSize="20dp"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/edt_tphone"
            android:hint="@string/phone_nuber"
            android:textColorHint="@color/Gray"
            android:textColor="@color/black"
            android:layout_marginTop="10dp"
            android:padding="20dp"
            android:drawablePadding="20dp"/>
        <RadioGroup
            android:id="@+id/tip_options_sex"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/edt_tphone"
            app:layout_constraintStart_toStartOf="parent"
            app:itemTextColor="@color/custom_color"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/option_sex_male"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/male" />

            <RadioButton
                android:id="@+id/option_sex_female"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/female"
                android:layout_marginStart="5dp"/>


        </RadioGroup>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/edt_name"
            android:hint="@string/full_name"
            android:textColorHint="@color/Gray"
            android:textColor="@color/black"
            android:layout_marginTop="10dp"
            android:padding="20dp"
            android:drawablePadding="20dp"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/edt_address"
            android:hint="@string/delivery_address"
            android:textColorHint="@color/Gray"
            android:textColor="@color/black"
            android:layout_marginTop="10dp"
            android:padding="20dp"
            android:drawablePadding="20dp"/>
        <RadioGroup
            android:id="@+id/tip_options_request"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/edt_address"
            app:layout_constraintStart_toStartOf="parent"
            app:itemTextColor="@color/custom_color"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/option_twenty_percent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/request_to_bring_upstairs" />

            <RadioButton
                android:id="@+id/option_eighteen_percent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/call_someone_else_to_receive_the_goods" />


        </RadioGroup>

    </LinearLayout>
    <LinearLayout
        android:layout_width="380dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        android:orientation="vertical">
        <TextView
            android:id="@+id/tv_payment"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/choose_a_form_of_payment"
            android:textColor="@color/black"
            android:textSize="20dp"/>
        <RadioGroup
            android:id="@+id/tip_options_payment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/tv_payment"
            app:layout_constraintStart_toStartOf="parent"
            app:itemTextColor="@color/custom_color"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/options_payment_visa"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Thẻ Visa, Master, JCB" />

            <RadioButton
                android:id="@+id/options_payment_momowallet"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/momo_wallet" />

            <RadioButton
                android:id="@+id/options_payment_cash"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cash_on_delivery" />

        </RadioGroup>

    </LinearLayout>
    <LinearLayout
        android:id="@+id/vouchers_account"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        tools:layout_editor_absoluteX="16dp">

        <ImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="10dp"
            android:src="@drawable/vouchers" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="10dp"
            android:paddingTop="5dp"
            android:text="@string/vouchers"
            android:textColor="@color/black" />

        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginStart="180dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="10dp"
            android:src="@drawable/ic_continues" />
    </LinearLayout>


</LinearLayout>