<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/srv"
    tools:context=".Fragment.ProductFragment">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:padding="20dp"
                android:orientation="vertical"
                android:background="@drawable/background"
                android:gravity="center|right"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="top|right"
                        android:layout_marginTop="1dp"
                        android:orientation="horizontal">

                        <ImageView
                            android:id="@+id/imgView_cart"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="8dp"
                            android:src="@drawable/ic_shopping_cart" />

                        <ImageView
                            android:id="@+id/imgView_setting"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="16dp"
                            android:src="@drawable/ic_settings" />

                    </LinearLayout>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="25dp"
                        android:text="@string/minimart"
                        android:textColor="@color/SpringGreen4"
                        android:textSize="30dp"
                        android:textStyle="bold"
                        android:layout_gravity="center|right"
                        android:layout_marginTop="40dp"/>

                </LinearLayout>

            </LinearLayout>

            <com.google.android.material.navigation.NavigationView
                android:id="@+id/nav_view2"
                android:layout_width="match_parent"
                android:layout_height="58dp"
                app:headerLayout="@layout/nav_search" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:weightSum="2">
                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="2dp"
                    android:text="@string/select_category"
                    android:textColor="@color/SpringGreen4"
                    android:textStyle="bold"
                    android:textSize="16sp"
                    app:layout_constraintStart_toStartOf="parent" />
                <TextView
                    android:textColor="@color/SpringGreen4"
                    android:text="@string/see"
                    android:id="@+id/tv_viewAllCategory"
                    android:layout_marginRight="7dp"
                    android:layout_marginStart="223dp"
                    android:textSize="@dimen/text_size_button"
                    android:layout_marginTop="5dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>


            </LinearLayout>


            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/categoryRecycler"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                app:layout_constraintTop_toBottomOf="@+id/textView2" />

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

</RelativeLayout>